--- a/log-in-user.html
+++ b/log-in-user.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="col-md-7">
 				<div class="btn-group boton" role="group">
-					<button type="button" class="btn btn-default">Iniciar sesión</button>
+					<a href="home.html" type="button" class="btn btn-default">Iniciar sesión</a>
 				</div>
 			</div>
 		</div>
